--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "4.12.12",
   "description": "A magical documentation generator.",
   "release": {
-    "branches": ["master"]
+    "branches": [
+      "master"
+    ]
   },
   "author": {
     "name": "qingwei-li",
@@ -68,6 +70,7 @@
     "*.js": "eslint --fix"
   },
   "dependencies": {
+    "docsify": "^4.13.0",
     "marked": "^1.2.9",
     "medium-zoom": "^1.0.6",
     "opencollective-postinstall": "^2.0.2",
@@ -111,8 +114,8 @@
     "live-server": "^1.2.1",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
     "playwright": "^1.44.0-alpha-2024-04-25",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.23.1",
     "rollup-plugin-async": "^1.2.0",
@@ -140,7 +143,7 @@
   },
   "config": {
     "commitizen": {
-        "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
   }
 }
