--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,5 +1,5 @@
 branches:
-  - develop
+  - master
 plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
